# rust_poc

./: .gitignore
barrel-rs-test/: Cargo.toml
barrel-rs-test/src/: main.rs
channel/: Cargo.toml
channel/src/: main.rs
closure_demo/: Cargo.toml
closure_demo/src/: main.rs
custom_derive_macro/hello_macro/: Cargo.toml
custom_derive_macro/hello_macro/src/: .lib.rs.swp
custom_derive_macro/hello_test/: Cargo.toml
custom_ser/: Cargo.toml
custom_ser/src/: lib.rs
diesel_demo/: .#diesel_demo  .env  Cargo.toml  diesel_demo
diesel_demo/src/: lib.rs
dlink/: Cargo.toml
dlink/src/: main.rs
iterator/: Cargo.toml
iterator/src/: main.rs
linklist/: Cargo.toml
linklist/src/: main.rs
mini-tokio/: Cargo.toml
mini-tokio/src/: main.rs
my-redis/: Cargo.toml
my-redis/examples/: hello-redis.rs
my-redis/src/: .main.rs.swo  .main.rs.swp  main.rs
nemo/: Cargo.toml
nemo/src/: main.rs
peter-poc/: Cargo.toml  server.py
peter-poc/src/: main.rs
pin_rs/: Cargo.toml
pin_rs/src/: main.rs
proc-macro-workshop-local/: main.rs
proc-macro-workshop-local/builder/: Cargo.toml
proc-macro-workshop-local/sorted/: Cargo.toml
proc-macro-workshop-local/sorted/src/: lib.rs
proc-macro-workshop-local/sorted/tests/: 05-match-expr.rs
rctest/: Cargo.toml
rctest/src/: main.rs
rs-arc/: Cargo.toml
rs-arc/src/: main.rs
rs-async-await/: Cargo.toml
rs-async-await/src/: join.rs  main.rs
rs_macro/: Cargo.toml
rs_macro/src/: main.rs
rust/enum06/: Cargo.toml
rust/struct05/: Cargo.toml
tungstenite-poc/: Cargo.toml
tungstenite-poc/src/: main.rs
(+25 files in other folders)
