[package]
name = "peter-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "2.0.3"
actix-web = "3.3.2"
futures-util = "0.3.17"
rustls = "0.18.0"
actix-http = {version="2.2.1", features = ["rustls"]}
