[package]
name = "sorted"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
quote = "1.0"
proc-macro2 = {version = "1.0", features = ["span-locations"] }
syn = { version = "1.0", features = ["extra-traits", "full", "visit-mut"] }
